feat: 검색 뷰 모델 - 피드백 반영

--- a/.gitignore
+++ b/.gitignore
@@ -70,4 +70,4 @@ playground.xcworkspace
 # End of https://www.toptal.com/developers/gitignore/api/xcode,swift
 
 # Naver api key
-naver-api-key.plist
+naver-apikey.json
