--- a/BookBaram/Config/BookBaram-Base.xcconfig
+++ b/BookBaram/Config/BookBaram-Base.xcconfig
@@ -1,13 +1,11 @@
 //
-//  BookBaram-Sandbox.xcconfig
+//  BookBaram-Base.xcconfig
 //  BookBaram
 //
-//  Created by 이송미 on 8/19/24.
+//  Created by 이송미 on 8/26/24.
 //
 
 // Configuration settings file format documentation can be found at:
 // https://help.apple.com/xcode/#/dev745c5c974
 
-#include "BookBaram-Base.xcconfig"
-
-APP_NAME = BookBaram-Sandbox
+NAVER_API_URL = https:/$()/openapi.naver.com
