--- a/.github/workflows/xcode-build.yml
+++ b/.github/workflows/xcode-build.yml
@@ -8,8 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: mac-latest
-
+    runs-on: macos-latest
     steps:
     - uses: actions/checkout@v3
     - name: Build Xcode
