feat: 책 리뷰 - 홈 화면에서 아이템 클릭 시 읽기 화면으로 이동

--- a/BookBaram/Config/BookBaram-Base.xcconfig
+++ b/BookBaram/Config/BookBaram-Base.xcconfig
@@ -8,4 +8,5 @@
 // Configuration settings file format documentation can be found at:
 // https://help.apple.com/xcode/#/dev745c5c974
 
+MODULE_NAME = BookBaram
 NAVER_API_URL = https:/$()/openapi.naver.com
