feat: swift6 대응 - xcode 16 버전 선택하도록 수정

--- a/.github/workflows/xcode-build.yml
+++ b/.github/workflows/xcode-build.yml
@@ -18,6 +18,9 @@ jobs:
       - name: Copy Api Key
         run: |
           cp BookBaram-key/naver-apikey.json BookBaram/naver-apikey.json
+      - name: Select Xcode
+        run: |
+          sudo xcode-select -s '/Applications/Xcode_16.app/Contents/Developer'
       - name: Build Xcode
         run: |
           xcodebuild clean build -project BookBaram.xcodeproj \
